--- a/Certificate_3.html
+++ b/Certificate_3.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center>
-    <img src="cert3.jpg" style="width: 40%;margin: 30px;">
+    <img src="Cert3.jpg" style="width: 40%;margin: 30px;">
 </center>
 </body>
 </html>
